<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">

    <include layout="@layout/content_timer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="40dp"
            android:contentDescription="@string/pause"
            app:srcCompat="@drawable/ic_pause" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="40dp"
            android:contentDescription="@string/start"
            app:srcCompat="@drawable/ic_start" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="40dp"
            android:contentDescription="@string/stop"
            app:srcCompat="@drawable/ic_stop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="295dp">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/previous"
            app:srcCompat="@drawable/ic_prev" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="275dp"
            android:layout_marginLeft="275dp"
            android:contentDescription="@string/next"
            app:srcCompat="@drawable/ic_next" />

    </LinearLayout>

</RelativeLayout>